2008-11-11 fabien
* modify some scripts to be able to make a subscription using the new safi form
* typo

2008-11-03 fabien
* add an interaction to raise an error on subscription submission if an account already exists
* add a default parameter to NOT be in editable mode
* hide "save draft and continue later" button and "Next step" buttons if user don't have Modify content permission.

2008-11-01 fabien
* fix some problem in the send of credentials. Now it works, even with yahoo ! (not considered as spam)
* fix a pb in a translated sentence

2008-10-21 fabien
* fix some mistakes in sendCrendentialsByEMail workflow script and remove sender because it's not required
* update testEgovMixin to add some other generic methods

2008-10-20 fabien
* update ERP5Site_getSecurityFromLatestWorkflowHistory  to remove workflow hardcoded value
* add a script generateNewLogin to generate new login (remove spaces and accents, add a number at the end if the login already exists, ...)
* send credentials using portal_notification

2008-10-16 fabien
* change css to have all the tabs of the forms (actions) on the right instead of have the first on right and the others in the middle

2008-10-15 fabien
* update some listbox to display the last application in first
* update css
* add some rights on assignee to the validated state on egov_universal_workflow. This avoid a security error if an agent have an assigned application and refuse it (it will change the state of the application to validated and redirect the agent on it).
* update some listbox to be able to handle searchable text and to be able to sort application by modification date (descending)
* make possible to return on the form page, even if the form has been submitted, this permit to see what have been entered in the form, but it's not possible to modify it
* display logout button on every pages

2008-10-10 fabien
bring some corrections after the Mme Ba review :