@@ -1,5 +1,6 @@
 2008-11-11 fabien
 * modify some scripts to be able to make a subscription using the new safi form
+* add assignment on person created
 * typo
 
 2008-11-03 fabien
